<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Norske Aviser</string>
    <string name="search">Søk</string>
    <string name="refresh">Oppdater</string>
    <string name="add">Legg til</string>
    <string name="share">Del</string>
    <string name="add_newspaper">Legg til nettavis</string>
    <string name="cancel">Avbryt</string>
    <string name="url">URL</string>
    <string name="title">Tittel</string>
    <string name="share_this">Del via</string>
    <string name="delete">Slett</string>
    <string name="settings">Innstillinger</string>
    <string name="invalid">Ugyldig URL</string>
    <string name="empty_input">Begge feltene må være fylt ut</string>
    <string name="success">Nettavis lagt til</string>
    <string name="could_not_find">Kunne ikke finne URLen</string>

    <!-- Preferences -->
    <string name="pref_text_size">Tekststørrelse</string>
    <string name="pref_text_size_summary">Tekststørrelse i nettleser</string>
    <string name="pref_about">Om / Lisenser</string>
    <string name="pref_about_summary">Om appen og brukte biblioteker</string>
    <string name="pref_ads">Fjern reklame</string>
    <string name="pref_ads_summary">Fjern reklame</string>

    <!-- Purchase removeads -->
    <string name="about_removeads">Dette vil fjerne all reklame i appen.</string>
    <string name="problem_purchasing">There was a problem processing the purchase.</string>
    <string name="setup_failed">In-app billing setup failed.</string>
    <string name="ad_remove_success">Advertisements will now be removed.</string>
    <string name="remove_ads">Fjern reklame.</string>

    <string-array name="textsizes_entries">
        <item name="60">Ekstra liten</item>
        <item name="80">Liten</item>
        <item name="100">Standard</item>
        <item name="150">Stor</item>
        <item name="170">Ekstra stor</item>
    </string-array>
    <string-array name="textsizes_values">
        <item name="60">60</item>
        <item name="80">80</item>
        <item name="100">100</item>
        <item name="150">150</item>
        <item name="170">170</item>
    </string-array>

    <!-- About libraries -->
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">Norske Aviser</string>

    <!-- Apache commons lib -->
    <string name="define_commonslang"></string>
    <string name="library_commonslang_author">Apache Software Foundation</string>
    <string name="library_commonslang_authorWebsite">http://www.apache.org/</string>
    <string name="library_commonslang_libraryName">Apache Commons Lang</string>
    <string name="library_commonslang_libraryDescription">Lang provides a host of helper utilities for the
        java.lang API, notably String manipulation methods, basic numerical methods, object reflection,
        concurrency, creation and serialization and System properties. Additionally it contains basic
        enhancements to java.util.Date and a series of utilities dedicated to help with building methods,
        such as hashCode, toString and equals.</string>
    <string name="library_commonslang_libraryWebsite">http://commons.apache.org/proper/commons-lang/</string>
    <string name="library_commonslang_libraryVersion">3.4</string>
    <string name="library_commonslang_isOpenSource">true</string>
    <string name="library_commonslang_repositoryLink">http://commons.apache.org/proper/commons-lang/download_lang.cgi</string>
    <string name="library_commonslang_licenseId">apache_2_0</string>

    <!-- Supertoast lib -->
    <string name="define_supertoast"></string>
    <string name="library_supertoast_author">JohnPersano</string>
    <string name="library_supertoast_authorWebsite">https://github.com/JohnPersano/SuperToasts/</string>
    <string name="library_supertoast_libraryName">SuperToasts</string>
    <string name="library_supertoast_libraryDescription">The SuperToasts library enhances and builds upon the Android
        Toast class.</string>
    <string name="library_supertoast_libraryWebsite">https://github.com/JohnPersano/SuperToasts</string>
    <string name="library_supertoast_libraryVersion">1.3.4</string>
    <string name="library_supertoast_isOpenSource">true</string>
    <string name="library_supertoast_repositoryLink">http://commons.apache.org/proper/commons-lang/download_lang.cgi</string>
    <string name="library_supertoast_licenseId">apache_2_0</string>
    <string name="title_activity_in_app">InAppActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
