<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="key_text_size"
        android:title="@string/pref_text_size"
        android:dialogTitle="@string/pref_text_size"
        android:summary="@string/pref_text_size_summary"
        android:entries="@array/textsizes_entries"
        android:entryValues="@array/textsizes_values"
        android:defaultValue="100"/>

    <Preference
        android:title="@string/pref_about"
        android:summary="@string/pref_about_summary"
        android:key="AboutInformation">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="no.kreativo.newspapersnor"
            android:targetClass="no.kreativo.newspapersnor.AboutActivity" />
    </Preference>

    <Preference
        android:title="@string/pref_ads"
        android:summary="@string/pref_ads_summary"
        android:key="RemoveAds">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="no.kreativo.newspapersnor"
            android:targetClass="no.kreativo.newspapersnor.InAppActivity" />
    </Preference>

</PreferenceScreen>