<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:avisreader="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_social_share"
        android:title="@string/share"
        avisreader:showAsAction="always"

        />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_navigation_refresh"
        android:title="@string/refresh"
        avisreader:showAsAction="always"/>

    <item
        android:id="@+id/action_removeads"
        android:title="@string/pref_ads"
        avisreader:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        avisreader:showAsAction="never"/>

</menu>